--- a/polybar/config
+++ b/polybar/config
@@ -78,7 +78,7 @@ reverse-scroll  = false
 ;=============== WS Icons ===============
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
+ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
