Change the compositition manager
Replace the command to initialize `compton` for the one that
initializes `xcompmgr`, because `compton` couldn't be installed,
due to an unresolved dependencie.

Signed-off-by: Leonardo Lana <leolanavo@gmail.com>

--- a/i3/config
+++ b/i3/config
@@ -191,7 +191,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "xrdb -load $HOME/.Xresources"
-exec --no-startup-id "compton --config $HOME/dotfiles/compton.conf -b"
+exec --no-startup-id "xcompmgr"
 exec --no-startup-id "numlockx on"
 
 ###################
