--- a/i3/config
+++ b/i3/config
@@ -122,8 +122,8 @@ bindsym $mod+Shift+space floating toggle
 ##################
 
 ### Navigation ###
-bindsym Ctrl+$mod+Right workspace prev
-bindsym Ctrl+$mod+Left workspace next
+bindsym Ctrl+$mod+Left workspace prev
+bindsym Ctrl+$mod+Right workspace next
 
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
