--- a/polybar/config
+++ b/polybar/config
@@ -22,6 +22,7 @@ line-size = 2
 
 font-0 = RobotoMono Nerd Font:size=11
 font-1 = Hack:fontformat=truetype:size=9;1
+font-2 = "Font Awesome 5 Brands:pixelsize=12;1"
 
 label-active-font = 0
 tray-position     = right
@@ -79,10 +80,11 @@ reverse-scroll  = false
 
 ws-icon-0 = 1;
 ws-icon-1 = 2;
-ws-icon-2 = 3;
+ws-icon-2 = 3;
 ws-icon-3 = 4;
 ws-icon-4 = 5;
-ws-icon-5 = 6;
+ws-icon-5 = 6;
+;ws-icon-5 = 6;
 ws-icon-6 = 7;
 ws-icon-7 = 8;
 ws-icon-8 = 9;
@@ -131,7 +133,7 @@ label-urgent-padding    = 1
 
 ;--------------- Core ---------------
 type    = internal/battery
-battery = BAT1
+battery = CMB0
 adapter = ADP1
 
 ;--------------- Formats ---------------
@@ -155,9 +157,6 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
-;--------------- Bar Width ---------------
-bar-capacity-width = 10
-
 ;--------------- Charging Icons ---------------
 animation-charging-0 = ${self.ramp-capacity-0}
 animation-charging-1 = ${self.ramp-capacity-1}
@@ -179,31 +178,13 @@ type = internal/volume
 
 ;--------------- Labels ---------------
 label-volume-foreground = ${colors.foreground}
-label-muted             =  ──────────
+label-muted             =  0%
 label-muted-underline   = ${colors.foreground-alt}
 
 ;--------------- Formats ---------------
 format-muted-foreground = ${colors.foreground}
-format-volume           = <ramp-volume> <bar-volume>
+format-volume           = <ramp-volume><label-volume>
 format-volume-underline = ${colors.foreground-alt}
-
-;--------------- Bar Fonts ---------------
-bar-volume-fill-font      = 1
-bar-volume-empty-font     = 1
-bar-volume-indicator-font = 1
-
-;--------------- Bar Settings ---------------
-bar-volume-width    = 10
-bar-volume-gradient = false
-
-;--------------- Bar Colors ---------------
-bar-volume-indicator-foreground = ${colors.foreground}
-bar-volume-empty-foreground     = ${colors.foreground}
-
-;--------------- Bar Icons ---------------
-bar-volume-fill      = ─
-bar-volume-empty     = ─
-bar-volume-indicator = |
 
 ;--------------- Volume icons ---------------
 ramp-volume-0 = 
@@ -220,25 +201,15 @@ ramp-volume-2 = 
 type = internal/backlight
 card = intel_backlight
 
-;--------------- Scrolling ---------------
-enable-scroll = false
-
 ;--------------- Formats ---------------
-format =<label><bar>
+format = <ramp><label>
 format-underline = ${colors.foreground-alt}
 format-padding = 1
 
 ;--------------- Labels ---------------
-label = 
+label = %percentage%%
 
-;--------------- Bar Fonts ---------------
-format-font        = 0
-bar-fill-font      = 1
-bar-empty-font     = 1
-bar-indicator-font = 1
-
-;--------------- Bar Options ---------------
-bar-width     = 10
-bar-fill      = ─
-bar-empty     = ─
-bar-indicator = |
+;--------------- Labels ---------------
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
