Change default wallpaper
Signed-off-by: Leonardo Lana <leolanavo@gmail.com>

--- a/i3/config
+++ b/i3/config
@@ -8,7 +8,7 @@
 ###############
 
 ### Directories ###
-set $wall      $HOME/dotfiles/images/wallpaper
+set $wall      $HOME/dotfiles/images/botd.jpg
 set $lock      $HOME/dotfiles/images/lock
 set $scriptdir $HOME/scripts
 set $screendir $HOME/Pictures/Screenshots
